fix adjust align bug

--- a/aurore/src/styles/Home.module.css
+++ b/aurore/src/styles/Home.module.css
@@ -1,5 +1,5 @@
 .title {
-  @apply font-bold font-sans text-[#003865] block sm:text-4xl lg:text-8xl lg:leading-tight text-left  ;
+  @apply font-bold font-sans text-[#003865] block sm:text-4xl lg:text-9xl lg:leading-tight text-left  ;
 }
 
 .description {
